# module10

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
notebooks/: preprocessing.py  synth_control.py
report/: report.qmd
src/module10/: synth_en.py
src/synth_control/: synth_en.py
