[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "module10"
authors = [{name = "Sergio Recio", email = "sergio.recio.rodriguez@ons.gov.uk"}]
description = "Causal inference"
readme = "README.md"
requires-python = ">=3.9"
version = "0.0.1"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Repository = "https://github.com/SergioRec/module10"

# `coverage` configurations
[tool.coverage.run]
source = [
    "./src"
]
omit = ["**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:"
]

# `isort` configurations
[tool.isort]
profile = "black"

# `pytest` configurations
[tool.pytest.ini_options]
addopts = [
    "-vv",
    "--doctest-modules"
]
doctest_optionflags = "NORMALIZE_WHITESPACE"
testpaths = [
    "./tests"
]
